FrostWire 2.0.4 build 524 - APR/25/2018
 - New jlibtorrent 1.2.0.18-RC4
 - Library updates: gms 15.0.0, re2j 1.2
 - Translations updated, Hungarian
 - Music player clean up and optimizations
 - Advanced Transfer Piece viewer rendering optimizations

FrostWire 2.0.3 build 521 - APR/12/2018
 - Search: Yify fixed
 - Issues with Android 8.0 notifications fixed
 - Fixes a title refresh issue on My Files when switching file types
 - Fixes a bug deleting a picture from the picture viewer screen
 - Library updates: applovin 7.8.6, gms 12.0.1
 - Translations updated: Czech, Greek, Danish
 - Performance upgrades

FrostWire 2.0.2 build 515 - MAR/26/2018
 - Application startup is faster
 - Faster YT downloads
 - Zooqle search fixes
 - TorrentDownloads search fixes
 - LimeTorrents search fixes
 - Library updates: jlibtorrent 1.2.0.17, applovin 7.8.5, ogury 2.2.8, mopub 4.20.0, okhttp 3.10.0, gson 2.8.2, gradle 4.6, gradle plugin 3.1.0, support libraries 27.1.0, gms 12.0.0
 - When audio files are deleted from "My Files" they're now cleared from "Recents" in "My Music"
 - Bug where deleted .torrent files would reappear fixed
 - Translations updated, Urdu update
 - Loads of Crash and Freeze fixes
 - VPN detection and offering updates
 - Notifications work again on Android 8.0

FrostWire 2.0.1 build 490 - FEB/06/2018
 - Archive.org search fixes
 - SoundCloud search fixes
 - Music Player 'Recent' tab fixes, thanks @votaguz
 - Updated Japanese, Korean, Russian, Vietnamese, Belarusian, Bulgarian, Czech translations
 - New jlibtorrent 1.2.0.16, fixes possible crash on application update, performance
 - Library updates: build tools 27.0.3, gradle 4.5, flexbox 0.3.2
 - Crash fixes, performance upgrades 

FrostWire 2.0.0 build 485 - DEC/25/2017
 - New Transfer Detail screens for BitTorrent transfers.
 - New Share current track with FrostWire Player screenshot attachment
 - Faster startup